--- a/src/layouts/PostFormatting/PostFormatting.css
+++ b/src/layouts/PostFormatting/PostFormatting.css
@@ -9,6 +9,14 @@
     word-wrap: break-word;
 }
 
+.post img {
+    width: 100%;
+}
+
+.post video {
+    width: 100%;
+}
+
 /* Add a little circle in the middle of the border-bottom on our .post
    just for the lolz and stylepoints. */
 .post::after {
