--- a/src/layouts/PostFormatting/PostFormatting.css
+++ b/src/layouts/PostFormatting/PostFormatting.css
@@ -120,6 +120,10 @@ div.page-template .post-title {
     line-height: 1.2;
 }
 
+.post-pagination {
+    margin-top: 30px;
+}
+
 
 /* ==========================================================================
        Media Queries - Smaller than 900px
